--- a/Lesson6.ipynb
+++ b/Lesson6.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "    def handle_data(self, d):\n",
     "        self.fed.append(d)\n",
     "    def get_data(self):\n",
-    "        return ''.join(self.fed)\n",
+    "        return ' '.join(self.fed)\n",
     "\n",
     "def strip_tags(html):\n",
     "    s = MLStripper()\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,9 +104,9 @@
     "            json_data = read_json_line(line)\n",
     "            for i in range(len(feature_files)):\n",
     "                dict_data[ident] = json_data[features[i]]\n",
-    "                feature_files[i].write(str(dict_data))\n",
+    "                feature_files[i].write(str(dict_data) + '\\n')\n",
     "                if (ident < 5000):\n",
-    "                    feature_light_files[i].write(str(dict_data) + \"/n\")\n",
+    "                    feature_light_files[i].write(str(dict_data) + '\\n')\n",
     "            ident += 1\n",
     "    for i in feature_light_files:\n",
     "        i.close()\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,13 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff188f10ea18443ba193748edfe8aff8",
+       "model_id": "5d1dcb7416c348a3b1d72ea64b133afa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,6 +141,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -149,9 +156,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e5fbe10ff46433db967b73af00d5117",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "extract_features_and_write(PATH_TO_DATA, 'test.json', is_train=False)"
    ]
@@ -170,103 +199,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "prefix = 'train'\n",
     "features = ['content', 'published', 'title', 'author']\n",
     "\n",
-    "files = [os.path.join(PATH_TO_DATA,\n",
-    "                                       '{}_{}.txt'.format(prefix, feat))                                         \n",
+    "l_files = [os.path.join(PATH_TO_DATA,\n",
+    "                                       '{}_{}_light.txt'.format(prefix, feat))   \n",
     "                     for feat in features]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 148,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 12.5 s\n"
+      "Wall time: 31.5 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "df = pd.DataFrame({})\n",
-    "for k in range(1, len(features)):\n",
-    "    array = ''\n",
-    "    f = codecs.open(files[k], \"r\", \"utf-8\")\n",
-    "    for file in f:\n",
-    "        array += file\n",
-    "        arr = array.split(\"}{\")\n",
-    "    arr[0] = arr[0][1:]\n",
-    "    arr[-1] = arr[-1][:-1]\n",
-    "    for i in range(len(arr)):\n",
-    "        arr[i] = \"{\" + arr[i] + \"}\"\n",
-    "    data = []\n",
-    "    for i in range(len(arr)):\n",
-    "        data.append(list(eval(arr[i]).values())[0])\n",
-    "    ser_buf = pd.Series(data)\n",
-    "    df[features[k]] = ser_buf"
+    "for k in range(0, len(features)):\n",
+    "    f = codecs.open(l_files[k], \"r\", \"utf-8\")\n",
+    "    arr = []\n",
+    "    count = 0\n",
+    "    for line in f:\n",
+    "        count += 1\n",
+    "        arr.append(list(eval(line[:-2]).values())[0])\n",
+    "    f.close()\n",
+    "    ser_buf = pd.Series(arr)\n",
+    "    df[features[k]] = ser_buf\n",
+    "df['content'] = df['content'].map(strip_tags)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Strip content: \\xa0, \\u200b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Division publications by hour, whether it's morning, day, night, whether it's a weekend\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in df.index:\n",
+    "    df['published'][i] = list(df['published'].values[i].values())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83580c3ac3eb47a78d0b83a8e66ddb52",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "0       2012-08-13T22:54:53.510Z\n",
+       "1       2015-08-03T07:44:50.331Z\n",
+       "2       2017-02-05T13:08:17.410Z\n",
+       "3       2017-05-06T08:16:30.776Z\n",
+       "4       2017-06-04T14:46:25.772Z\n",
+       "5       2017-04-02T16:21:15.171Z\n",
+       "6       2016-08-15T04:16:02.103Z\n",
+       "7       2015-01-14T21:31:07.568Z\n",
+       "8       2014-02-11T04:11:54.771Z\n",
+       "9       2015-10-25T02:58:05.551Z\n",
+       "10      2016-08-15T15:31:13.601Z\n",
+       "11      2016-08-09T21:01:06.303Z\n",
+       "12      2016-09-08T15:47:57.336Z\n",
+       "13      2016-09-30T18:05:35.950Z\n",
+       "14      2017-06-27T15:49:22.909Z\n",
+       "15      2015-07-13T06:52:44.618Z\n",
+       "16      2017-05-01T13:22:43.785Z\n",
+       "17      2016-08-31T17:11:24.263Z\n",
+       "18      2017-06-30T07:55:55.103Z\n",
+       "19      2016-12-13T23:29:35.556Z\n",
+       "20      2016-01-27T22:19:05.027Z\n",
+       "21      2016-12-14T01:15:02.122Z\n",
+       "22      2016-09-05T22:02:40.326Z\n",
+       "23      2016-12-13T17:59:40.527Z\n",
+       "24      2017-05-02T17:28:39.120Z\n",
+       "25      2016-08-30T23:43:24.940Z\n",
+       "26      2017-04-26T02:50:29.511Z\n",
+       "27      2016-06-18T06:54:10.331Z\n",
+       "28      2016-05-17T17:52:00.960Z\n",
+       "29      2017-04-17T16:29:28.306Z\n",
+       "                  ...           \n",
+       "4970    2015-11-16T00:27:29.401Z\n",
+       "4971    2015-11-30T00:00:28.639Z\n",
+       "4972    2015-12-02T02:43:53.010Z\n",
+       "4973    2015-07-29T22:07:02.697Z\n",
+       "4974    2015-09-22T15:46:05.538Z\n",
+       "4975    2015-10-21T21:01:05.812Z\n",
+       "4976    2016-10-28T14:14:51.342Z\n",
+       "4977    2015-01-22T01:49:32.006Z\n",
+       "4978    2016-09-26T07:20:47.629Z\n",
+       "4979    2017-01-22T13:01:11.777Z\n",
+       "4980    2015-06-01T15:00:17.104Z\n",
+       "4981    2015-06-07T22:05:04.336Z\n",
+       "4982    2015-05-16T18:03:10.181Z\n",
+       "4983    2015-09-23T14:56:59.825Z\n",
+       "4984    2016-08-07T23:20:06.617Z\n",
+       "4985    2015-01-10T18:09:09.351Z\n",
+       "4986    2015-08-01T06:49:09.925Z\n",
+       "4987    2016-07-09T07:55:30.600Z\n",
+       "4988    2016-10-22T20:20:14.982Z\n",
+       "4989    2016-01-29T13:02:16.808Z\n",
+       "4990    2017-02-16T17:10:43.196Z\n",
+       "4991    2017-04-10T20:23:52.007Z\n",
+       "4992    2017-05-06T13:31:50.204Z\n",
+       "4993    2017-04-23T04:48:41.632Z\n",
+       "4994    2017-06-13T13:55:19.796Z\n",
+       "4995    2017-06-01T01:04:51.058Z\n",
+       "4996    2016-06-11T04:36:01.706Z\n",
+       "4997    2016-03-18T15:55:31.865Z\n",
+       "4998    2015-11-03T16:58:16.277Z\n",
+       "4999    2015-10-27T13:12:53.227Z\n",
+       "Name: published, Length: 5000, dtype: object"
       ]
      },
+     "execution_count": 152,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\tqdm\\_tqdm_notebook.py\u001b[0m in \u001b[0;36m__iter__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    219\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__iter__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    220\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 221\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0mobj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtqdm_notebook\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__iter__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    222\u001b[0m                 \u001b[1;31m# return super(tqdm...) will not catch exception\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    223\u001b[0m                 \u001b[1;32myield\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\tqdm\\_tqdm.py\u001b[0m in \u001b[0;36m__iter__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    977\u001b[0m \"\"\", fp_write=getattr(self.fp, 'write', sys.stderr.write))\n\u001b[0;32m    978\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 979\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0mobj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0miterable\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    980\u001b[0m                 \u001b[1;32myield\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    981\u001b[0m                 \u001b[1;31m# Update and possibly print the progressbar.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\codecs.py\u001b[0m in \u001b[0;36m__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    711\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    712\u001b[0m         \u001b[1;34m\"\"\" Return the next decoded line from the input stream.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 713\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    714\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    715\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__iter__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\codecs.py\u001b[0m in \u001b[0;36m__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    642\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    643\u001b[0m         \u001b[1;34m\"\"\" Return the next decoded line from the input stream.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 644\u001b[1;33m         \u001b[0mline\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    645\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mline\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    646\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mline\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\codecs.py\u001b[0m in \u001b[0;36mreadline\u001b[1;34m(self, size, keepends)\u001b[0m\n\u001b[0;32m    565\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    566\u001b[0m             \u001b[0mline\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 567\u001b[1;33m             \u001b[0mlines\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplitlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeepends\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    568\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlines\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    569\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "\n",
-    "f = codecs.open(files[0], \"r\", \"utf-8\")\n",
-    "array = ''\n",
-    "arr = []\n",
-    "for file in f:\n",
-    "    array += file\n",
-    "    arr += array.split(\"}{\")\n",
-    "arr[0] = arr[0][1:]\n",
-    "arr[-1] = arr[-1][:-1]\n",
-    "\n",
-    "X_train_counts = count_vect.fit_transform(df.title)\n"
+    "df['published']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -277,101 +370,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>published</th>\n",
-       "      <th>title</th>\n",
-       "      <th>author</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>{'$date': '2012-08-13T22:54:53.510Z'}</td>\n",
-       "      <td>Medium Terms of Service – Medium Policy – Medium</td>\n",
-       "      <td>{'name': None, 'url': 'https://medium.com/@Med...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>{'$date': '2015-08-03T07:44:50.331Z'}</td>\n",
-       "      <td>Amendment to Medium Terms of Service Applicabl...</td>\n",
-       "      <td>{'name': None, 'url': 'https://medium.com/@Med...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>{'$date': '2017-02-05T13:08:17.410Z'}</td>\n",
-       "      <td>走入山與海之間：閩東大刀會和兩岸走私 – Yun-Chen Chien（簡韻真） – Medium</td>\n",
-       "      <td>{'name': None, 'url': 'https://medium.com/@ael...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>{'$date': '2017-05-06T08:16:30.776Z'}</td>\n",
-       "      <td>How fast can a camera get? – What comes to min...</td>\n",
-       "      <td>{'name': None, 'url': 'https://medium.com/@vai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>{'$date': '2017-06-04T14:46:25.772Z'}</td>\n",
-       "      <td>A game for the lonely fox – What comes to mind...</td>\n",
-       "      <td>{'name': None, 'url': 'https://medium.com/@vai...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               published  \\\n",
-       "0  {'$date': '2012-08-13T22:54:53.510Z'}   \n",
-       "1  {'$date': '2015-08-03T07:44:50.331Z'}   \n",
-       "2  {'$date': '2017-02-05T13:08:17.410Z'}   \n",
-       "3  {'$date': '2017-05-06T08:16:30.776Z'}   \n",
-       "4  {'$date': '2017-06-04T14:46:25.772Z'}   \n",
-       "\n",
-       "                                               title  \\\n",
-       "0   Medium Terms of Service – Medium Policy – Medium   \n",
-       "1  Amendment to Medium Terms of Service Applicabl...   \n",
-       "2  走入山與海之間：閩東大刀會和兩岸走私 – Yun-Chen Chien（簡韻真） – Medium   \n",
-       "3  How fast can a camera get? – What comes to min...   \n",
-       "4  A game for the lonely fox – What comes to mind...   \n",
-       "\n",
-       "                                              author  \n",
-       "0  {'name': None, 'url': 'https://medium.com/@Med...  \n",
-       "1  {'name': None, 'url': 'https://medium.com/@Med...  \n",
-       "2  {'name': None, 'url': 'https://medium.com/@ael...  \n",
-       "3  {'name': None, 'url': 'https://medium.com/@vai...  \n",
-       "4  {'name': None, 'url': 'https://medium.com/@vai...  "
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
